--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@types/vue-tel-input": "^2.1.3",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
-    "daisyui": "^3.9.2",
+    "daisyui": "^4.6.1",
     "nuxt": "^3.7.4",
-    "nuxt-icon": "^0.5.0"
+    "nuxt-icon": "^0.5.0",
+    "tailwind-scrollbar": "^3.0.5"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.9",
