--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,14 +7,20 @@
     },
     "tailwindCSS.experimental.configFile": "tailwind.config.ts",
     "tailwindCSS.experimental.classRegex": [
-        ["ui:\\s*{([^)]*)\\s*}", "[\"'`]([^\"'`]*).*?[\"'`]"],
-        ["/\\*ui\\*/\\s*{([^;]*)}", ":\\s*[\"'`]([^\"'`]*).*?[\"'`]"]
-      ],
+        [
+            "ui:\\s*{([^)]*)\\s*}",
+            "[\"'`]([^\"'`]*).*?[\"'`]"
+        ],
+        [
+            "/\\*ui\\*/\\s*{([^;]*)}",
+            ":\\s*[\"'`]([^\"'`]*).*?[\"'`]"
+        ]
+    ],
     "tailwindCSS.classAttributes": [
         "class",
         "className",
         "ngClass",
         "ui"
-      ]
-  }
-  
+    ],
+    "html.format.wrapAttributes": "force-expand-multiline"
+}
