--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "axios": "^1.5.1",
     "defu": "^6.1.2",
     "floating-vue": "^2.0.0-beta.24",
+    "gsap": "^3.12.5",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.1.7",
+    "universal-social-auth": "^0.2.6",
     "v-calendar": "^3.1.2",
     "vue-picture-cropper": "^0.7.0",
     "vue-tel-input": "^8.1.4",
