--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwind-scrollbar": "^3.0.5"
   },
   "dependencies": {
+    "@fawmi/vue-google-maps": "^0.9.72",
     "@fullcalendar/core": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/interaction": "^6.1.9",
