--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,10 @@
         [
             "/\\*ui\\*/\\s*{([^;]*)}",
             ":\\s*[\"'`]([^\"'`]*).*?[\"'`]"
+        ],
+        [
+            "clsx\\(([^)]*)\\)",
+            "(?:'|\"|`)([^']*)(?:'|\"|`)"
         ]
     ],
     "tailwindCSS.classAttributes": [
