--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "universal-social-auth": "^0.2.6",
     "v-calendar": "^3.1.2",
     "vue-picture-cropper": "^0.7.0",
+    "vue-sonner": "^1.1.3",
     "vue-tel-input": "^8.1.4",
     "vuedraggable": "^4.1.0",
     "zod": "^3.22.2"
