--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,14 @@
         "internationalization"
     ],
     "cSpell.words": [
+        "clsx",
+        "heroicons",
+        "LARAVEL",
         "nuxt",
-        "Nuxt"
+        "Nuxt",
+        "nuxtjs",
+        "pinia",
+        "tailwindcss",
+        "vueuse"
     ]
 }
